# pixie

./: CMakeLists.txt  LICENSE  README.md
inc/sdl/: types.hpp  window.hpp
inc/ui/: ui.hpp  widget.hpp
inc/ui/widgets/: fps_counter.hpp
src/: main.cpp
src/sdl/: window.cpp
src/ui/: ui.cpp
src/ui/widgets/: fps_counter.cpp
